--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,13 @@ site: distill::distill_website
 output:
   postcards::trestles
 ---
- 
-I am a classically trained data scientist living in the San Francisco Bay Area. 
-Currently I work on the Oculus team at Facebook. I love talking about baseball, 
-true crime podcasts, and causal inference.
+
+## Bio
+
+Carlos
+
+## Education
+
+## Papers
+
+## Projects
