--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,13 @@ MSPH 2022, Rollins School of Public Health, Emory University, USA.
 
 MD 2017, National University of Piura, Peru.
 	
-## Papers
+## Selected papers
+Full list of manuscripts could be found [here](https://www.ncbi.nlm.nih.gov/myncbi/1legs68s4hzAy/bibliography/public/).
+
 
 ## Projects
+[Prokopec lab](https://www.prokopeclab.org/people2) | Arboviral research
+
+[IETSI](http://www.essalud.gob.pe/ietsi/desarrll_invest.html) | Division of observational studies
+
+[Emerge - UPCH](https://investigacion.cayetano.edu.pe/catalogo/saludintegral/emerge) | Emerging diseases and climate change
