--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,7 @@ MSPH 2022, Rollins School of Public Health, Emory University, USA.
 MD 2017, National University of Piura, Peru.
 	
 ## Selected papers
-Full list of manuscripts could be found [here](https://www.ncbi.nlm.nih.gov/myncbi/1legs68s4hzAy/bibliography/public/).
+Full list of manuscripts could be find [here](https://www.ncbi.nlm.nih.gov/myncbi/1legs68s4hzAy/bibliography/public/).
 
 
 ## Projects
