--- a/index.Rmd
+++ b/index.Rmd
@@ -17,6 +17,8 @@ Carlos is a 'William H. Foege' Global Health Fellow enrolled in the Masters' of 
 
 
 ## Education
+PhD 2022-Present, Department of Epidemiology, University of Washington, USA.
+
 MSPH 2022, Rollins School of Public Health, Emory University, USA.
 
 MD 2017, National University of Piura, Peru.
