--- a/index.Rmd
+++ b/index.Rmd
@@ -13,8 +13,7 @@ output:
 
 ## Bio
 
-Carlos is a 'William H. Foege' Global Health Fellow enrolled in the Masters' of Science in Public Health (MSPH) on Environmental Health and Epidemiology at the Rollins School of Public Health, Emory University. He is interested in causal inference methods applied on arboviral disease randomized trials for vector-control strategies at the population-level.
-
+Carlos is a current PhD student in Epidemiology at the University of Washington School of Public Health. Interested in causal inference methods applied on observational studies and randomized trials under time-variant settings. Besides, applying causal inference methods on cluster-randomized trials addressing PrEP initiation in Kenya.
 
 ## Education
 PhD 2022-Present, Department of Epidemiology, University of Washington, USA.
