--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ Full list of manuscripts could be find [here](https://www.ncbi.nlm.nih.gov/myncb
 
 
 ## Projects
-[Ortblad lab - Fred Hutchinson Center](https://www.fredhutch.org/en/faculty-lab-directory/ortblad-katrina.html?gclid=Cj0KCQjwuO6WBhDLARIsAIdeyDL4BCjoNw0yTDZ144PJVBaBAV-jARHzbGwAimoGPFuEzjEwMNs5ATkaApSaEALw_wcB) | HIV trials
+[Ortblad lab - Fred Hutchinson Center](https://research.fredhutch.org/ortblad/en/members.html) | HIV trials
 
 [Prokopec lab - Emory University](https://www.prokopeclab.org/people2) | Arboviral disease trials
 
