--- a/others.Rmd
+++ b/others.Rmd
@@ -1,13 +1,10 @@
 ---
 title: "Others"
-description: |
+description: 
   Some curious things about me
 ---
 
 I love cats, and dogs. Also I love cooking Peruvian food.
 
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
 
